objects/vlocity_cmt__Interface_BillingInfo__c.object
<CustomObject>
    <description>Interface Object: Vlocity DataRaptor interface object for importing billing information into the Vlocity Communications database.</description>
    <fields>
        <fullName>vlocity_cmt__DRBundleName__c</fullName>
        <label>DR Custom Setting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DRError__c</fullName>
        <description>Full error when processing.</description>
        <label>DR Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DRProgressData__c</fullName>
        <description>JSON of current progress processing item if using bulk processing methods</description>
        <label>DR Progress</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DRStatus__c</fullName>
        <description>Status after processing DR map.</description>
        <label>DR Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StaAccountId__c</fullName>
        <description>Statement AccountId</description>
        <label>StaAccountId__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StaAdditionalDiscount__c</fullName>
        <description>Statement AdditionalDiscount</description>
        <label>StaAdditionalDiscount__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StaBalanceDue__c</fullName>
        <description>Statement BalanceDue</description>
        <label>StaBalanceDue__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StaCurrentBalance__c</fullName>
        <description>Statement CurrentBalance</description>
        <label>StaCurrentBalance__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StaDueDate__c</fullName>
        <description>Statement DueDate</description>
        <label>StaDueDate__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StaItemExternalId__c</fullName>
        <externalId>true</externalId>
        <label>StaItemExternalId</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StaLinIteAmount__c</fullName>
        <description>StatementLineItem Amount</description>
        <label>StaLinIteAmount__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StaLinIteAssetId__c</fullName>
        <description>StatementLineItem AssetId</description>
        <label>StaLinIteAssetId__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StaLinIteCategory__c</fullName>
        <description>StatementLineItem Category</description>
        <label>StaLinIteCategory__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StaLinIteCurrencyAmount__c</fullName>
        <description>StatementLineItem CurrencyAmount</description>
        <label>StaLinIteCurrencyAmount__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StaLinIteCurrentMonthToDate__c</fullName>
        <description>StatementLineItem CurrentMonthToDate</description>
        <label>StaLinIteCurrentMonthToDate__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StaLinIteIndicator__c</fullName>
        <description>StatementLineItem Indicator</description>
        <label>StaLinIteIndicator__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StaLinIteOneTime__c</fullName>
        <description>StatementLineItem OneTime</description>
        <label>StaLinIteOneTime__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StaLinIteRecurring__c</fullName>
        <description>StatementLineItem Recurring</description>
        <label>StaLinIteRecurring__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StaLinIteRichText__c</fullName>
        <description>StatementLineItem RichText</description>
        <label>StaLinIteRichText__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StaLinIteSequence__c</fullName>
        <description>StatementLineItem Sequence</description>
        <label>StaLinIteSequence__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StaLinIteServiceEndDate__c</fullName>
        <description>StatementLineItem ServiceEndDate</description>
        <label>StaLinIteServiceEndDate__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StaLinIteServiceID__c</fullName>
        <description>StatementLineItem ServiceID</description>
        <label>StaLinIteServiceID__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StaLinIteServiceName__c</fullName>
        <description>StatementLineItem ServiceName</description>
        <label>StaLinIteServiceName__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StaLinIteServiceStartDate__c</fullName>
        <description>StatementLineItem ServiceStartDate</description>
        <label>StaLinIteServiceStartDate__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StaLinIteServiceType__c</fullName>
        <description>StatementLineItem ServiceType</description>
        <label>StaLinIteServiceType__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StaLinIteStatementDate__c</fullName>
        <description>StatementLineItem StatementDate</description>
        <label>StaLinIteStatementDate__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StaLinIteStatementGroup__c</fullName>
        <description>StatementLineItem StatementGroup</description>
        <label>StaLinIteStatementGroup__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StaLinIteStatementId__c</fullName>
        <description>StatementLineItem StatementId</description>
        <label>StaLinIteStatementId__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StaLinIteSubtype__c</fullName>
        <description>StatementLineItem Subtype</description>
        <label>StaLinIteSubtype__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StaLinIteType__c</fullName>
        <description>StatementLineItem Type</description>
        <label>StaLinIteType__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StaLinIteUOM__c</fullName>
        <description>StatementLineItem UOM</description>
        <label>StaLinIteUOM__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StaLinIteUsage__c</fullName>
        <description>StatementLineItem Usage</description>
        <label>StaLinIteUsage__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StaName__c</fullName>
        <description>Statement Name</description>
        <label>StaName__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StaPreviousBalance__c</fullName>
        <description>Statement PreviousBalance</description>
        <label>StaPreviousBalance__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StaServicesBilled__c</fullName>
        <description>Statement ServicesBilled</description>
        <label>StaServicesBilled__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StaStatementAccountstatus__c</fullName>
        <description>Statement StatementAccountstatus</description>
        <label>StaStatementAccountstatus__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StaStatementDate__c</fullName>
        <description>Statement StatementDate</description>
        <label>StaStatementDate__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StaStatementDetails__c</fullName>
        <description>Statement StatementDetails</description>
        <label>StaStatementDetails__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StaStatementImageURL__c</fullName>
        <description>Statement StatementImageURL</description>
        <label>StaStatementImageURL__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StaStatementPeriodEndDate__c</fullName>
        <description>Statement StatementPeriodEndDate</description>
        <label>StaStatementPeriodEndDate__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StaStatementPeriodStartDate__c</fullName>
        <description>Statement StatementPeriodStartDate</description>
        <label>StaStatementPeriodStartDate__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StaStatus__c</fullName>
        <description>Statement Status</description>
        <label>StaStatus__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Interface_BillingInfo</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <columns>vlocity_cmt__DRBundleName__c</columns>
        <columns>vlocity_cmt__DRError__c</columns>
        <columns>vlocity_cmt__DRProgressData__c</columns>
        <columns>vlocity_cmt__DRStatus__c</columns>
        <columns>vlocity_cmt__StaItemExternalId__c</columns>
        <columns>vlocity_cmt__StaName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Interface_BillingInfo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interface_BillingInfo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>